Refactor webpack configuration and update dependencies
- Removed the old output path and changed it to './frontend/dist'.
- Updated the mode from 'development' to 'production'.
- Added HtmlWebpackPlugin to generate an index.html file in the output directory.
- Integrated CopyPlugin to copy assets from 'frontend/public/assets' to the output directory.
- Updated package.json and package-lock.json to include new dependencies: copy-webpack-plugin and html-webpack-plugin.
- Removed the devServer configuration as it is no longer needed for production builds.
- Deleted unused font file 'e05c5f3d1fa6a3893d84.ttf'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-# Ignore node_modules
 node_modules/
-blog-backend/node_modules/
-blog_frontend/node_modules/
 
-# Ignore environment files
-.env
-.env.local
-.env.*.local
-
-# Ignore Docker files
-Dockerfile
-docker-compose.yml
+npm-debug.log
 *.log
 
-# Ignore OS-specific files
+dist/
+build/
+
+.env
+.env.*
+
+.vscode/
+
 .DS_Store
 Thumbs.db
