--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
+# Ignore node_modules
 node_modules/
+blog-backend/node_modules/
+blog_frontend/node_modules/
 
-npm-debug.log
+# Ignore environment files
+.env
+.env.local
+.env.*.local
+
+# Ignore Docker files
+Dockerfile
+docker-compose.yml
 *.log
 
-dist/
-build/
-
-.env
-.env.*
-
-.vscode/
-
+# Ignore OS-specific files
 .DS_Store
 Thumbs.db
