--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "u24580717_d1",
-  "proxy": "http://localhost:3000",
   "version": "2.0.0",
   "main": "index.js",
   "scripts": {
@@ -16,14 +15,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.12.2",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^4.21.1",
     "express-session": "^1.18.2",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.18.2",
+    "multer": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1"
@@ -34,11 +32,7 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "babel-loader": "^10.0.0",
-    "concurrently": "^9.2.1",
-    "copy-webpack-plugin": "^13.0.1",
     "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.4",
-    "nodemon": "^3.1.10",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1",
