Docker Build files and file restructured. Goodnight

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
-# Ignore node_modules
+# Node modules
 node_modules/
-blog-backend/node_modules/
-blog_frontend/node_modules/
+backend/node_modules/
+frontend/node_modules/
 
-# Ignore environment files
+# Build output
+frontend/dist/
+frontend/build/
+backend/uploads/
+
+# Environment files
 .env
 .env.local
 .env.*.local
 
-# Ignore Docker files
-Dockerfile
-docker-compose.yml
+# Logs
 *.log
 
-# Ignore OS-specific files
+# OS-specific files
 .DS_Store
 Thumbs.db
