--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,11 @@ FROM node:lts
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 3000
-CMD ["node", "server.js"]
+
+CMD ["npm", "start"]
