--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts AS build
+FROM node:22-alpine
 
 WORKDIR /app
 
@@ -8,17 +8,6 @@ RUN npm install
 
 COPY . .
 
-# Build frontend
-RUN npm run build
+EXPOSE 3000
 
-# Stage 2: Serve with nginx
-FROM nginx:stable-alpine
-
-# Copy build output to nginx html folder
-COPY --from=build /app/public /usr/share/nginx/html
-
-# Copy custom nginx.conf
-COPY nginx.conf /etc/nginx/nginx.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "start"]
