--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,27 +1,32 @@
 {
-  "name": "imy220-frontend",
+  "name": "imy220-project-frontend",
   "version": "1.0.0",
-  "private": true,
-  "main": "src/index.js",
-  "license": "ISC",
+  "description": "",
+  "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js --mode development",
-    "build": "webpack --config webpack.config.js --mode production"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "tailwind:build": "npx tailwindcss -i ./src/input.css -o ./src/index.css --watch",
+    "start": "webpack serve --open --port 3000 --host 0.0.0.0"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.30.1"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.28.3",
-    "@babel/core": "^7.28.3",
+    "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
+    "babel": "^5.8.38",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.4",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
     "style-loader": "^4.0.0",
-    "webpack": "^5.101.3",
+    "webpack": "^5.102.1"
+  },
+  "devDependencies": {
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   }
